--- a/css/style.css
+++ b/css/style.css
@@ -1840,6 +1840,10 @@ h6 {
   overflow: hidden;
 }
 
+.fab:hover{
+    box-shadow: 0 0 6px rgba(0, 0, 0, .24), 0 4px 8px rgba(0, 0, 0, .38);
+}
+
 .fab > i {
   font-size: 2em;
   line-height: 55px;
